--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                 <a data-lang="en" href="indexuk.html">
                     <img src="images/uk-flag.png" alt="UK Flag" class="flag-icon"> English
                 </a>
+                <a data-lang="tr" href="indexturkey.html">
+                    <img src="images/turkey-flag.png" alt="Turkish Flag" class="flag-icon"> Türkçe
+                </a>
                 <!-- Add more languages as needed -->
             </div>
         </div>
