--- a/indexuk.html
+++ b/indexuk.html
@@ -63,6 +63,9 @@
                 <a data-lang="mk" href="index.html">
                     <img src="images/macedonia-flag.png" alt="Macedonian Flag" class="flag-icon"> Македонски
                 </a>
+                <a data-lang="tr" href="indexturkey.html">
+                    <img src="images/turkey-flag.png" alt="Turkish Flag" class="flag-icon"> Türkçe
+                </a>
 
                 <!-- Add more languages as needed -->
             </div>
