--- a/indexturkey.html
+++ b/indexturkey.html
@@ -65,6 +65,15 @@
                 <a data-lang="en" href="indexuk.html">
                     <img src="images/uk-flag.png" alt="UK Flag" class="flag-icon"> English
                 </a>
+                <a data-lang="pl" href="indexpolski.html">
+                    <img src="images/poland.png" alt="Poland Flag" class="flag-icon"> Polski
+                </a>
+                <a data-lang="gr" href="indexgermany.html">
+                    <img src="images/germany.png" alt="Germany Flag" class="flag-icon"> Deutsch
+                </a>
+                <a data-lang="gr" href="indexholland.html">
+                    <img src="images/holland.png" alt="Holland Flag" class="flag-icon"> Nederlands
+                </a>
                 <!-- Add more languages as needed -->
             </div>
         </div>
