--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
                 <a data-lang="tr" href="indexturkey.html">
                     <img src="images/turkey-flag.png" alt="Turkish Flag" class="flag-icon"> Türkçe
                 </a>
+                <a data-lang="pl" href="indexpolski.html">
+                    <img src="images/poland.png" alt="Poland Flag" class="flag-icon"> Polski
+                </a>
+                <a data-lang="gr" href="indexgermany.html">
+                    <img src="images/germany.png" alt="Germany Flag" class="flag-icon"> Deutsch
+                </a>
+                <a data-lang="gr" href="indexholland.html">
+                    <img src="images/holland.png" alt="Holland Flag" class="flag-icon"> Nederlands
+                </a>
                 <!-- Add more languages as needed -->
             </div>
         </div>
