--- a/product.html
+++ b/product.html
@@ -46,57 +46,57 @@
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Пепси",
+            name: "Пепси 0.25",
             price: "120",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Пепси Макс",
+            name: "Пепси Макс 0.25",
             price: "120",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Газоза/Gazoza",
+            name: "Газоза/Gazoza 0.25",
             price: "100",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Леден Чај/Ice Tea",
+            name: "Леден Чај/Ice Tea 0.25",
             price: "120",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "7уп",
+            name: "7уп 0.25",
             price: "120",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Негазирани сокови/Juice",
+            name: "Негазирани сокови/Juice 0.25",
             price: "140",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Цеден Лимон/Fresh Lemon Juice",
+            name: "Цеден Лимон/Fresh Lemon Juice 0.25",
             price: "90",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Цеден портокал/Fresh Orange Juice",
+            name: "Цеден портокал/Fresh Orange Juice 0.25",
             price: "180",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Mirinda/Mirinda",
+            name: "Mirinda/Mirinda 0.25",
             price: "120",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Домашна лимонада со вкус/Homemade lemonade",
+            name: "Домашна лимонада со вкус/Homemade lemonade 0.25",
             price: "160",
             ingredients: "Безалкохолни пијалоци",
           },
           {
-            name: "Овошна сода",
+            name: "Овошна сода 0.33",
             price: "140",
             ingredients: "Безалкохолни пијалоци"
           }
@@ -180,92 +180,92 @@
         // ВИНАРИЈА
         [
           {
-            name: "Synthesis cuvee barrique(dry)",
+            name: "Synthesis cuvee barrique(dry) 0.75",
             price: "1900",
             ingredients: "Винарија",
           },
           {
-            name: "Dionis vranec barrique(dry)",
+            name: "Dionis vranec barrique(dry) 0.75",
             price: "2200",
             ingredients: "Винарија",
           },
           {
-            name: "Hermes vranec(dry)",
+            name: "Hermes vranec(dry) 0.75",
             price: "1300",
             ingredients: "Винарија",
           },
           {
-            name: "Hermes cabernet sauvignon(dry)",
+            name: "Hermes cabernet sauvignon(dry) 0.75",
             price: "1300",
             ingredients: "Винарија",
           },
           {
-            name: "Amfora vranec(semi-dry)",
+            name: "Amfora vranec(semi-dry) 0.75",
             price: "900",
             ingredients: "Винарија",
           },
           {
-            name: "Chardonnay barrique fermented(dry)",
+            name: "Chardonnay barrique fermented(dry) 0.75",
             price: "2400",
             ingredients: "Винарија",
           },
           {
-            name: "Muscat temjanika(semi-dry)",
+            name: "Muscat temjanika(semi-dry) 0.75",
             price: "1350",
             ingredients: "Винарија",
           },
           {
-            name: "Elegija chardonnay(dry)",
+            name: "Elegija chardonnay(dry) 0.75",
             price: "1300",
             ingredients: "Винарија",
           },
           {
-            name: "Elegija traminer(dry)",
+            name: "Elegija traminer(dry) 0.75",
             price: "1300",
             ingredients: "Винарија",
           },
           {
-            name: "Elegija zupljanka(dry)",
+            name: "Elegija zupljanka(dry) 0.75",
             price: "1300",
             ingredients: "Винарија",
           },
           {
-            name: "Amphora cuvee(semi-dry)",
+            name: "Amphora cuvee(semi-dry) 0.75",
             price: "900",
             ingredients: "Винарија",
           },
           {
-            name: "Temjanika(dry)",
+            name: "Temjanika(dry) 0.75",
             price: "1400",
             ingredients: "Винарија",
           },
           {
-            name: "Chardonnay(dry)",
+            name: "Chardonnay(dry) 0.75",
             price: "1400",
             ingredients: "Винарија",
           },
           {
-            name: "Sauvignon blanc(dry)",
+            name: "Sauvignon blanc(dry) 0.75",
             price: "1400",
             ingredients: "Винарија",
           },
           {
-            name: "Amfora Rose(dry)",
+            name: "Amfora Rose(dry) 0.75",
             price: "900",
             ingredients: "Винарија",
           },
           {
-            name: "Elegija syrah(dry)",
+            name: "Elegija syrah(dry) 0.75",
             price: "1200",
             ingredients: "Винарија",
           },
           {
-            name: "Muscat rolinger(dry)",
+            name: "Muscat rolinger(dry) 0.75",
             price: "1250",
             ingredients: "Винарија",
           },
           {
-            name: "Muscat rolinger red(semi-dry)",
+            name: "Muscat rolinger red(semi-dry) 0.75",
             price: "1250",
             ingredients: "Винарија",
           },
@@ -333,207 +333,207 @@
         // АЛКОХОЛНИ ПИЈАЛОЦИ
         [
           {
-            name: "Лозова Жолта",
+            name: "Лозова Жолта 0.04",
             price: "120",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Лозова бела",
+            name: "Лозова бела 0.04",
             price: "120",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Мастика",
+            name: "Мастика 0.04",
             price: "120",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Ракија Азбука",
+            name: "Ракија Азбука 0.04",
             price: "130",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Гордион амбер ракија",
+            name: "Гордион амбер ракија 0.04",
             price: "160",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Бадел Вилијамс ракија",
+            name: "Бадел Вилијамс ракија 0.04",
             price: "170",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џин бадел",
+            name: "Џин бадел 0.04",
             price: "120",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Смидџин",
+            name: "Смидџин 0.04",
             price: "250",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џин беефеатер",
+            name: "Џин беефеатер 0.04",
             price: "170",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џин Гордонс",
+            name: "Џин Гордонс 0.04",
             price: "190",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џин пинк Гордонс",
+            name: "Џин пинк Гордонс 0.04",
             price: "180",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џин Бомбај",
+            name: "Џин Бомбај 0.04",
             price: "240",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Водка бадел",
+            name: "Водка бадел 0.04",
             price: "120",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Бејлис",
+            name: "Бејлис 0.04",
             price: "180",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Фенејс",
+            name: "Фенејс 0.04",
             price: "150",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Крушковац пеар ликер",
+            name: "Крушковац пеар ликер 0.04",
             price: "140",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Текила",
+            name: "Текила 0.03",
             price: "130",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Амарето",
+            name: "Амарето 0.04",
             price: "150",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Корлат Шливовица",
+            name: "Корлат Шливовица 0.04",
             price: "220",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Корлат мараска",
+            name: "Корлат мараска 0.05",
             price: "220",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Шот",
+            name: "Шот 0.04",
             price: "100",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Смирноф",
+            name: "Смирноф 0.04",
             price: "160",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џек Даниелс",
+            name: "Џек Даниелс 0.04",
             price: "280",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џемјсон",
+            name: "Џемјсон 0.04",
             price: "180",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џејмсон Блек",
+            name: "Џејмсон Блек 0.04",
             price: "290",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џони Ред",
+            name: "Џони Ред 0.04",
             price: "160",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Џони Блек",
+            name: "Џони Блек 0.04",
             price: "260",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "4 Рози",
+            name: "4 Рози 0.04",
             price: "200",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Вилијам Пеел",
+            name: "Вилијам Пеел 0.04",
             price: "150",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Рум Морган",
+            name: "Рум Морган 0.04",
             price: "160",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Јегермајстер",
+            name: "Јегермајстер 0.04",
             price: "210",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Пелинковац бадел",
+            name: "Пелинковац бадел 0.04",
             price: "120",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Пелинковац антик",
+            name: "Пелинковац антик 0.04",
             price: "170",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Коњак бадел",
+            name: "Коњак бадел 0.04",
             price: "120",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Коњак бадел блек",
+            name: "Коњак бадел блек 0.04",
             price: "160",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Рум бадел",
+            name: "Рум бадел 0.04",
             price: "120",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Шток 84",
+            name: "Шток 84 0.04",
             price: "150",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Текила олмека",
+            name: "Текила олмека 0.04",
             price: "170",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Аперол",
+            name: "Аперол 0.04",
             price: "160",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Корлат лоза",
+            name: "Корлат лоза 0.04",
             price: "220",
             ingredients: "Алкохолни пијалоци",
           },
           {
-            name: "Кампари",
+            name: "Кампари 0.04",
             price: "160",
             ingredients: "Алкохолни пијалоци",
           },
@@ -676,7 +676,7 @@
             ingredients: "Мелено месо 250г, кашкавал 100г",
           },
           {
-            name: "Ќебапи со кајмак",
+            name: "Ќебапи со кајмак 350г",
             price: "360",
             ingredients: "Јадења од мелено месо",
           },
@@ -696,7 +696,7 @@
             ingredients: "Мелено месо 300г, кашкавал, зденка, печурки, шунка",
           },
           {
-            name: "Ќебапи",
+            name: "Ќебапи 300г",
             price: "320",
             ingredients: "Јадења од мелено месо",
           },
@@ -812,12 +812,12 @@
         //ЈАДЕЊА ВО ТАВА
         [
         {
-            name: "Селско месо",
+            name: "Селско месо 450г",
             price: "440",
             ingredients: "Свинско месо, пилешко месо, кашкавал, печурки, кромид, лук, пиперка, домат",
           },
           {
-            name: "Тава Лихнидија",
+            name: "Тава Лихнидија 450г",
             price: "480",
             ingredients: "Свинско месо,пилешко месо,сланина,домат,пиперка,кромид,лук,буковка,печурки,чаден кашкавал",
 
@@ -834,7 +834,7 @@
 
           },
           {
-            name: "Печурки со сланина и кашкавал",
+            name: "Печурки со сланина и кашкавал 200г",
             price: "370",
             ingredients: "Јадења во тава",
 
@@ -1043,12 +1043,12 @@
             ingredients: "Десерти",
           },
           {
-            name: "Чоколаден мус",
+            name: "Чоколаден мус 100г",
             price: "160",
             ingredients: "Десерти",
           },
           {
-            name: "Овошна салата со сезонско овошје",
+            name: "Овошна салата со сезонско овошје 300г",
             price: "220",
             ingredients: "Десерти",
           },
