--- a/productsgr.html
+++ b/productsgr.html
@@ -45,57 +45,57 @@
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Pepsi",
+        "name": "Pepsi 0.25",
         "price": "120",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Pepsi Max",
+        "name": "Pepsi Max 0.25",
         "price": "120",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Gazoza",
+        "name": "Gazoza 0.25",
         "price": "100",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Eistee",
+        "name": "Eistee 0.25",
         "price": "120",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "7Up",
+        "name": "7Up 0.25",
         "price": "120",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Saft",
+        "name": "Saft 0.25",
         "price": "140",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Frischer Zitronensaft",
+        "name": "Frischer Zitronensaft 0.25",
         "price": "90",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Frisch gepresster Orangensaft",
+        "name": "Frisch gepresster Orangensaft 0.25",
         "price": "180",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Mirinda",
+        "name": "Mirinda 0.25",
         "price": "120",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Hausgemachte Limonade",
+        "name": "Hausgemachte Limonade 0.25",
         "price": "160",
         "ingredients": "Alkoholfreie Getränke",
     },
     {
-        "name": "Fruchtsoda",
+        "name": "Fruchtsoda 0.33",
         "price": "140",
         "ingredients": "Alkoholfreie Getränke"
     },
@@ -177,92 +177,92 @@
         // WINES
         [
     {
-        "name": "Synthesis Cuvee Barrique (Trocken)",
+        "name": "Synthesis Cuvee Barrique (Trocken) 0.75",
         "price": "1900",
         "ingredients": "Wein",
     },
     {
-        "name": "Dionis Vranec Barrique (Trocken)",
+        "name": "Dionis Vranec Barrique (Trocken) 0.75",
         "price": "2200",
         "ingredients": "Wein",
     },
     {
-        "name": "Hermes Vranec (Trocken)",
+        "name": "Hermes Vranec (Trocken) 0.75",
         "price": "1300",
         "ingredients": "Wein",
     },
     {
-        "name": "Hermes Cabernet Sauvignon (Trocken)",
+        "name": "Hermes Cabernet Sauvignon (Trocken) 0.75",
         "price": "1300",
         "ingredients": "Wein",
     },
     {
-        "name": "Amfora Vranec (Halbtrocken)",
+        "name": "Amfora Vranec (Halbtrocken) 0.75",
         "price": "900",
         "ingredients": "Wein",
     },
     {
-        "name": "Chardonnay Barrique Fermentiert (Trocken)",
+        "name": "Chardonnay Barrique Fermentiert (Trocken) 0.75",
         "price": "2400",
         "ingredients": "Wein",
     },
     {
-        "name": "Muscat Temjanika (Halbtrocken)",
+        "name": "Muscat Temjanika (Halbtrocken) 0.75",
         "price": "1350",
         "ingredients": "Wein",
     },
     {
-        "name": "Elegija Chardonnay (Trocken)",
+        "name": "Elegija Chardonnay (Trocken) 0.75",
         "price": "1300",
         "ingredients": "Wein",
     },
     {
-        "name": "Elegija Traminer (Trocken)",
+        "name": "Elegija Traminer (Trocken) 0.75",
         "price": "1300",
         "ingredients": "Wein",
     },
     {
-        "name": "Elegija Zupljanka (Trocken)",
+        "name": "Elegija Zupljanka (Trocken) 0.75",
         "price": "1300",
         "ingredients": "Wein",
     },
     {
-        "name": "Amphora Cuvee (Halbtrocken)",
+        "name": "Amphora Cuvee (Halbtrocken) 0.75",
         "price": "900",
         "ingredients": "Wein",
     },
     {
-        "name": "Temjanika (Trocken)",
+        "name": "Temjanika (Trocken) 0.75",
         "price": "1400",
         "ingredients": "Wein",
     },
     {
-        "name": "Chardonnay (Trocken)",
+        "name": "Chardonnay (Trocken) 0.75",
         "price": "1400",
         "ingredients": "Wein",
     },
     {
-        "name": "Sauvignon Blanc (Trocken)",
+        "name": "Sauvignon Blanc (Trocken) 0.75",
         "price": "1400",
         "ingredients": "Wein",
     },
     {
-        "name": "Amfora Rose (Trocken)",
+        "name": "Amfora Rose (Trocken) 0.75",
         "price": "900",
         "ingredients": "Wein",
     },
     {
-        "name": "Elegija Syrah (Trocken)",
+        "name": "Elegija Syrah (Trocken) 0.75",
         "price": "1200",
         "ingredients": "Wein",
     },
     {
-        "name": "Muscat Rolinger (Trocken)",
+        "name": "Muscat Rolinger (Trocken) 0.75",
         "price": "1250",
         "ingredients": "Wein",
     },
     {
-        "name": "Muscat Rolinger Rot (Halbtrocken)",
+        "name": "Muscat Rolinger Rot (Halbtrocken) 0.75",
         "price": "1250",
         "ingredients": "Wein",
     },
@@ -329,207 +329,207 @@
         // Alcoholic beverages
         [
     {
-        "name": "Gelbe Rakija",
+        "name": "Gelbe Rakija 0.04",
         "price": "120",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Weiße Rakija",
+        "name": "Weiße Rakija 0.04",
         "price": "120",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Mastika",
+        "name": "Mastika 0.04",
         "price": "120",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Rakija Azbuka",
+        "name": "Rakija Azbuka 0.04",
         "price": "130",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Gordion Amber Rakija",
+        "name": "Gordion Amber Rakija 0.04",
         "price": "160",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Badel Williams Rakija",
+        "name": "Badel Williams Rakija 0.04",
         "price": "170",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Gin Badel",
+        "name": "Gin Badel 0.04",
         "price": "120",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Smidgin",
+        "name": "Smidgin 0.04",
         "price": "250",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Gin Beefeater",
+        "name": "Gin Beefeater 0.04",
         "price": "170",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Gin Gordons",
+        "name": "Gin Gordons 0.04",
         "price": "190",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Gin Pink Gordons",
+        "name": "Gin Pink Gordons 0.04",
         "price": "180",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Gin Bombay",
+        "name": "Gin Bombay 0.04",
         "price": "240",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Wodka Badel",
+        "name": "Wodka Badel 0.04",
         "price": "120",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Baileys",
+        "name": "Baileys 0.04",
         "price": "180",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Feneys",
+        "name": "Feneys 0.04",
         "price": "150",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Krushkovac Birnenlikör",
+        "name": "Krushkovac Birnenlikör 0.04",
         "price": "140",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Tequila",
+        "name": "Tequila 0.03",
         "price": "130",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Amaretto",
+        "name": "Amaretto 0.04",
         "price": "150",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Korlat Slivovitz",
+        "name": "Korlat Slivovitz 0.04",
         "price": "220",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Korlat Maraska",
+        "name": "Korlat Maraska 0.05",
         "price": "220",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Shot",
+        "name": "Shot 0.04",
         "price": "100",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Smirnoff",
+        "name": "Smirnoff 0.04",
         "price": "160",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Jack Daniels",
+        "name": "Jack Daniels 0.04",
         "price": "280",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Jameson",
+        "name": "Jameson 0.04",
         "price": "180",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Jameson Black",
+        "name": "Jameson Black 0.04",
         "price": "290",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Johnny Red",
+        "name": "Johnny Red 0.04",
         "price": "160",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Johnny Black",
+        "name": "Johnny Black 0.04",
         "price": "260",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "4 Roses",
+        "name": "4 Roses 0.04",
         "price": "200",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "William Peel",
+        "name": "William Peel 0.04",
         "price": "150",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Rum Morgan",
+        "name": "Rum Morgan 0.04",
         "price": "160",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Jagermeister",
+        "name": "Jagermeister 0.04",
         "price": "210",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Pelinkovac Badel",
+        "name": "Pelinkovac Badel 0.04",
         "price": "120",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Pelinkovac Antik",
+        "name": "Pelinkovac Antik 0.04",
         "price": "170",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Cognac Badel",
+        "name": "Cognac Badel 0.04",
         "price": "120",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Cognac Badel Black",
+        "name": "Cognac Badel Black 0.04",
         "price": "160",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Rum Badel",
+        "name": "Rum Badel 0.04",
         "price": "120",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Stock 84",
+        "name": "Stock 84 0.04",
         "price": "150",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Tequila Olmeca",
+        "name": "Tequila Olmeca 0.04",
         "price": "170",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Aperol",
+        "name": "Aperol 0.04",
         "price": "160",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Korlat Lozova",
+        "name": "Korlat Lozova 0.04",
         "price": "220",
         "ingredients": "Alkoholische Getränke",
     },
     {
-        "name": "Campari",
+        "name": "Campari 0.04",
         "price": "160",
         "ingredients": "Alkoholische Getränke",
     },
@@ -668,7 +668,7 @@
         "ingredients": "Hackfleisch 250g, gelber Käse 100g",
     },
     {
-        "name": "Kebapi mit Kaymak",
+        "name": "Kebapi mit Kaymak 350g",
         "price": "360",
         "ingredients": "Gericht aus Hackfleisch",
     },
@@ -688,7 +688,7 @@
         "ingredients": "Hackfleisch 300g, Käse, Zdenka, Pilze, Schinken",
     },
     {
-        "name": "Kebabs",
+        "name": "Kebabs 300g",
         "price": "320",
         "ingredients": "Gericht aus Hackfleisch",
     },
@@ -797,12 +797,12 @@
         //dishes pan
         [
     {
-        "name": "Dorfgericht",
+        "name": "Dorfgericht 450g",
         "price": "440",
         "ingredients": "Schweinefleisch, Hähnchen, Käse, Pilze, Zwiebel, Knoblauch, Paprika, Tomaten",
     },
     {
-        "name": "Lihnidia Pfanne",
+        "name": "Lihnidia Pfanne 450g",
         "price": "480",
         "ingredients": "Schweinefleisch, Hähnchen, Speck, Tomaten, Paprika, Zwiebel, Knoblauch, Champignons, Rauchkäse",
     },
