--- a/productsgr.html
+++ b/productsgr.html
@@ -817,7 +817,7 @@
         "ingredients": "Gerichte aus der Pfanne",
     },
     {
-        "name": "Pilze mit Speck und Käse",
+        "name": "Pilze mit Speck und Käse 200g",
         "price": "370",
         "ingredients": "Gerichte aus der Pfanne",
     },
