--- a/product.html
+++ b/product.html
@@ -1290,6 +1290,16 @@
             price: "40",
             ingredients: "Додатоци",
           },
+            {
+            name: "Кајмак топче",
+            price: "130",
+            ingredients: "Додатоци",
+          },
+             {
+            name: "Пармезан 50г",
+            price: "120",
+            ingredients: "Додатоци",
+          },
         ],
         //КОКТЕЛИ
         [
