--- a/productsuk.html
+++ b/productsuk.html
@@ -1299,6 +1299,16 @@
             price: "40",
             ingredients: "Sides",
           },
+            {
+            name: "Milk solids",
+            price: "130",
+            ingredients: "Sides",
+          },
+            {
+            name: "Parmesan",
+            price: "120",
+            ingredients: "Sides",
+          },
         ],
         //COCKTAILS
         [
