--- a/productspl.html
+++ b/productspl.html
@@ -1251,6 +1251,16 @@
                         "name": "Ketchup, majonez",
                         "price": "40",
                         "ingredients": "Dodatki"
+                    },
+                    {
+                        "name": "Kulka śmietankowa",
+                        "price": "130",
+                        "ingredients": "Dodatki"
+                    },
+                             {
+                        "name": "Parmezan",
+                        "price": "120",
+                        "ingredients": "Dodatki"
                     }
                 ],
 
