--- a/productsgr.html
+++ b/productsgr.html
@@ -1298,6 +1298,16 @@
             price: "40",
             ingredients: "Beilagen",
           },
+              {
+            name: "Sahnekugel",
+            price: "130",
+            ingredients: "Beilagen",
+          },
+              {
+            name: "Parmesan",
+            price: "120",
+            ingredients: "Beilagen",
+          },
         ],
         //COCKTAILS
         [
