--- a/productsholland.html
+++ b/productsholland.html
@@ -1241,6 +1241,16 @@
                         "price": "40",
                         "ingredients": "Bijgerechten",
                     },
+                      {
+                        "name": "Roombal",
+                        "price": "130",
+                        "ingredients": "Bijgerechten",
+                    },
+                      {
+                        "name": "Parmezaanse kaas 50g",
+                        "price": "120",
+                        "ingredients": "Bijgerechten",
+                    },
                 ],
                 // COCKTAILS
                 [
