--- a/productsgr.html
+++ b/productsgr.html
@@ -1304,7 +1304,7 @@
             ingredients: "Beilagen",
           },
               {
-            name: "Parmesan",
+            name: "Parmesan 50g",
             price: "120",
             ingredients: "Beilagen",
           },
