--- a/productsuk.html
+++ b/productsuk.html
@@ -1305,7 +1305,7 @@
             ingredients: "Sides",
           },
             {
-            name: "Parmesan",
+            name: "Parmesan 50g",
             price: "120",
             ingredients: "Sides",
           },
