--- a/productsturkey.html
+++ b/productsturkey.html
@@ -1247,7 +1247,7 @@
                         "ingredients": "Yan yemekler"
                     },
                     {
-                        "name": "Parmesan",
+                        "name": "Parmesan 50g",
                         "price": "120",
                         "ingredients": "Yan yemekler"
                     },
