--- a/productspl.html
+++ b/productspl.html
@@ -1258,7 +1258,7 @@
                         "ingredients": "Dodatki"
                     },
                              {
-                        "name": "Parmezan",
+                        "name": "Parmezan 50g",
                         "price": "120",
                         "ingredients": "Dodatki"
                     }
