--- a/productspl.html
+++ b/productspl.html
@@ -19,13 +19,13 @@
         </div>
         <!-- Back Button -->
         <a href="indexpolski.html" class="mb-4 back btn btn-warning shadow border-radius-14px fw-bold px-3">
-            &lt; Назад кон менито
+            &lt; Powrót do menu
         </a>
         <!-- Product List -->
         <div id="product-list"></div>
         <!-- Back Button -->
         <a href="indexpolski.html" class="back mb-2 btn btn-warning shadow border-radius-14px fw-bold px-3">
-            &lt; Назад кон менито
+            &lt; Powrót do menu
         </a>
     </div>
 
